style: fix bug where items would go offscreen if there are to many inside .menu-items

--- a/src/menu-page/menuStyles.css
+++ b/src/menu-page/menuStyles.css
@@ -21,23 +21,28 @@
   display: flex;
   justify-content: center;
 
-  gap: 32px;
-
   width: 100%;
-  max-width: 100vw;
+
   background-color: rgba(256, 256, 256, 0.15);
   backdrop-filter: blur(16px);
   box-shadow: 0px 8px 32px rgba(256, 256, 256, 0.4);
 
   border-top: 1px solid rgba(256, 256, 256, 0.15);
 
-  padding: 1rem;
+  padding: 1.5rem;
 
   overflow-x: auto;
   overflow-y: hidden;
 
   scrollbar-color: rgba(256, 256, 256, 0.5) transparent;
   scrollbar-width: thin;
+}
+
+.menu-wrapper {
+  display: flex;
+  justify-content: flex-start;
+
+  gap: 3vw;
 }
 
 .menu-item {
@@ -70,7 +75,7 @@
   height: auto;
 }
 
-.beverages > .menu-items > .menu-item > .item-img {
+.beverages > .menu-items > .menu-wrapper > .menu-item > .item-img {
   height: calc(256px + 32px);
   width: auto;
 }
